# hybrid3d

./: .gitignore  README.md  environment.yml  parse_config.py  test.py  train.py
base/: base_data_loader.py  base_trainer.py
config/: server_3dmatch_coord.yaml  server_3dmatch_frag.yaml  server_3dmatch_fusion.yaml  server_3dmatch_vote.yaml  test_3dmatch_frag.yaml
csrc/: CMakeLists.txt  build_csrc.sh  c_utils.cc
data_loader/: data_loader_factory.py  data_loaders.py  dense_to_sparse.py  pcd_preprocess.py  redwood_lidar.py  redwood_lidar_fragment.py  transforms.py  x3dmatch.py  x3dmatch_fragment.py
evaluation/: eval_registration_recall.sh  eval_utils.py  evaluate_fpfh.py  evaluate_kp2d.py  evaluate_our.py  evaluate_superpoint.py  registration_3dmatch.py  repeatability_3dmatch.py  run_registration.sh  superpoint.py  various_tau.py
logger/: logger_config.json  visualization.py
model/: kpconv.yaml  model_3d_coord_skip.py  model_coord_vote.py  model_factory.py  model_helper.py  model_multi_tower.py  model_pcd.py  model_rgb_only.py  model_vote_factory.py  model_vote_fusion_direct_assign.py  model_vote_fusion_fcgf_only.py  model_vote_fusion_v3.py
tools/: align_obj.py  depth_visualizer.py  fuse_scene_fragment.m  fuse_scene_fragment.py  fusion_module.py  generate_fragment_indices.py  generate_overlapping_areas.py  mesh_denoise.py  mesh_denoise_cmd.py  rgbd_integration.py  sample_frag_pair_subset.py  scene_max_K_testing.py  trajectory_io.py  transfer_redwood_points.py  visualize_2d_descriptor.py  visualize_3d_match.py  visualize_kpt_in_scene.py  (+1 more)
trainer/: __init__.py  (+7 more)
(+86 files in other folders)
